sauer cvs update

--- a/src/enet/autom4te.cache/traces.1
+++ b/src/enet/autom4te.cache/traces.1
@@ -1,4 +1,4 @@
-m4trace:configure.in:1: -1- AC_INIT([libenet], [10-12-2007])
+m4trace:configure.in:1: -1- AC_INIT([libenet], [9-15-2008])
 m4trace:configure.in:1: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.in:1: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.in:1: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
@@ -139,9 +139,9 @@ m4trace:configure.in:1: -1- m4_pattern_allow([^host_alias$])
 m4trace:configure.in:1: -1- AC_SUBST([target_alias])
 m4trace:configure.in:1: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.in:1: -1- m4_pattern_allow([^target_alias$])
-m4trace:configure.in:2: -1- AM_INIT_AUTOMAKE([libenet.a], [10-12-2007])
+m4trace:configure.in:2: -1- AM_INIT_AUTOMAKE([libenet.a], [9-15-2008])
 m4trace:configure.in:2: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.in:2: -1- AM_AUTOMAKE_VERSION([1.9.6])
+m4trace:configure.in:2: -1- AM_AUTOMAKE_VERSION([1.10.1])
 m4trace:configure.in:2: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.in:2: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.in:2: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -152,13 +152,17 @@ m4trace:configure.in:2: -1- m4_pattern_allow([^INSTALL_SCRIPT$])
 m4trace:configure.in:2: -1- AC_SUBST([INSTALL_DATA])
 m4trace:configure.in:2: -1- AC_SUBST_TRACE([INSTALL_DATA])
 m4trace:configure.in:2: -1- m4_pattern_allow([^INSTALL_DATA$])
+m4trace:configure.in:2: -1- AC_SUBST([am__isrc], [' -I$(srcdir)'])
+m4trace:configure.in:2: -1- AC_SUBST_TRACE([am__isrc])
+m4trace:configure.in:2: -1- m4_pattern_allow([^am__isrc$])
+m4trace:configure.in:2: -1- _AM_SUBST_NOTMAKE([am__isrc])
 m4trace:configure.in:2: -1- AC_SUBST([CYGPATH_W])
 m4trace:configure.in:2: -1- AC_SUBST_TRACE([CYGPATH_W])
 m4trace:configure.in:2: -1- m4_pattern_allow([^CYGPATH_W$])
 m4trace:configure.in:2: -1- AC_SUBST([PACKAGE], [libenet.a])
 m4trace:configure.in:2: -1- AC_SUBST_TRACE([PACKAGE])
 m4trace:configure.in:2: -1- m4_pattern_allow([^PACKAGE$])
-m4trace:configure.in:2: -1- AC_SUBST([VERSION], [10-12-2007])
+m4trace:configure.in:2: -1- AC_SUBST([VERSION], [9-15-2008])
 m4trace:configure.in:2: -1- AC_SUBST_TRACE([VERSION])
 m4trace:configure.in:2: -1- m4_pattern_allow([^VERSION$])
 m4trace:configure.in:2: -1- AC_DEFINE_TRACE_LITERAL([PACKAGE])
@@ -169,6 +173,7 @@ m4trace:configure.in:2: -1- AC_DEFINE_TRACE_LITERAL([VERSION])
 m4trace:configure.in:2: -1- m4_pattern_allow([^VERSION$])
 m4trace:configure.in:2: -1- AH_OUTPUT([VERSION], [/* Version number of package */
 #undef VERSION])
+m4trace:configure.in:2: -1- AC_REQUIRE_AUX_FILE([missing])
 m4trace:configure.in:2: -1- AC_SUBST([ACLOCAL])
 m4trace:configure.in:2: -1- AC_SUBST_TRACE([ACLOCAL])
 m4trace:configure.in:2: -1- m4_pattern_allow([^ACLOCAL$])
@@ -193,7 +198,8 @@ m4trace:configure.in:2: -1- m4_pattern_allow([^STRIP$])
 m4trace:configure.in:2: -1- AC_SUBST([INSTALL_STRIP_PROGRAM])
 m4trace:configure.in:2: -1- AC_SUBST_TRACE([INSTALL_STRIP_PROGRAM])
 m4trace:configure.in:2: -1- m4_pattern_allow([^INSTALL_STRIP_PROGRAM$])
-m4trace:configure.in:2: -1- AC_SUBST([mkdir_p])
+m4trace:configure.in:2: -1- AC_REQUIRE_AUX_FILE([install-sh])
+m4trace:configure.in:2: -1- AC_SUBST([mkdir_p], ["$MKDIR_P"])
 m4trace:configure.in:2: -1- AC_SUBST_TRACE([mkdir_p])
 m4trace:configure.in:2: -1- m4_pattern_allow([^mkdir_p$])
 m4trace:configure.in:2: -1- AC_SUBST([AWK])
@@ -266,9 +272,12 @@ m4trace:configure.in:4: -1- m4_pattern_allow([^AMDEP_TRUE$])
 m4trace:configure.in:4: -1- AC_SUBST([AMDEP_FALSE])
 m4trace:configure.in:4: -1- AC_SUBST_TRACE([AMDEP_FALSE])
 m4trace:configure.in:4: -1- m4_pattern_allow([^AMDEP_FALSE$])
+m4trace:configure.in:4: -1- _AM_SUBST_NOTMAKE([AMDEP_TRUE])
+m4trace:configure.in:4: -1- _AM_SUBST_NOTMAKE([AMDEP_FALSE])
 m4trace:configure.in:4: -1- AC_SUBST([AMDEPBACKSLASH])
 m4trace:configure.in:4: -1- AC_SUBST_TRACE([AMDEPBACKSLASH])
 m4trace:configure.in:4: -1- m4_pattern_allow([^AMDEPBACKSLASH$])
+m4trace:configure.in:4: -1- _AM_SUBST_NOTMAKE([AMDEPBACKSLASH])
 m4trace:configure.in:4: -1- AC_SUBST([CCDEPMODE], [depmode=$am_cv_CC_dependencies_compiler_type])
 m4trace:configure.in:4: -1- AC_SUBST_TRACE([CCDEPMODE])
 m4trace:configure.in:4: -1- m4_pattern_allow([^CCDEPMODE$])
@@ -281,6 +290,8 @@ m4trace:configure.in:4: -1- m4_pattern_allow([^am__fastdepCC_TRUE$])
 m4trace:configure.in:4: -1- AC_SUBST([am__fastdepCC_FALSE])
 m4trace:configure.in:4: -1- AC_SUBST_TRACE([am__fastdepCC_FALSE])
 m4trace:configure.in:4: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
+m4trace:configure.in:4: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
+m4trace:configure.in:4: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
 m4trace:configure.in:5: -1- AC_SUBST([RANLIB])
 m4trace:configure.in:5: -1- AC_SUBST_TRACE([RANLIB])
 m4trace:configure.in:5: -1- m4_pattern_allow([^RANLIB$])
@@ -345,3 +356,4 @@ m4trace:configure.in:35: -1- AC_SUBST_TRACE([builddir])
 m4trace:configure.in:35: -1- AC_SUBST_TRACE([abs_builddir])
 m4trace:configure.in:35: -1- AC_SUBST_TRACE([abs_top_builddir])
 m4trace:configure.in:35: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.in:35: -1- AC_SUBST_TRACE([MKDIR_P])
